# brp-spec

./: .gitignore  CHANGELOG.md  README.md  README_EN.md  SECURITY.md  install.ps1  install.sh  run_e2e.sh  test_brp_chain.py
.github/workflows/: ci.yml  release.yml
adapter/: brp_mcp_adapter.py
bridge/: Cargo.toml  deny.toml
bridge/bindings/: Capabilities.ts  ClientInfo.ts  InitializeParams.ts  InitializeResult.ts  Permission.ts  PermissionSet.ts  Precondition.ts  ServerInfo.ts  SessionState.ts
bridge/src/: auth.rs  config.rs  ipc_unix.rs  ipc_windows.rs  lockfile.rs  log_sanitizer.rs  main.rs  mode.rs  native_msg.rs  ratelimit.rs  router.rs  token_manager.rs  ws_server.rs
bridge/src/protocol/: message.rs  mod.rs  session.rs
bridge/src/transport/: mod.rs  native.rs
docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md  IMPLEMENTATION_GAP.md  README-zh.md  RECOVERY_PROTOCOL.md  RFC_TEMPLATE.md  ROADMAP.md  SECURITY-ARCHITECTURE-DECISIONS.md  SECURITY-HARDENING-PLAN.md  USAGE-MODES.md  v0.4.0-B1-IMPLEMENTATION-PLAN.md  v0.4.2-IMPLEMENTATION-PLAN.md  v0.5.0-IMPLEMENTATION-PLAN.md  v0.5.1-IMPLEMENTATION-PLAN.md  v0.5.2-IMPLEMENTATION-PLAN.md  v0.6.0-IMPLEMENTATION-PLAN.md
docs/archive/: v0.4.1-IMPLEMENTATION-PLAN.md  v0.4.2-IMPLEMENTATION-PLAN.md  v0.7.0-IMPLEMENTATION-PLAN.md  v0.8.0-IMPLEMENTATION-PLAN.md
docs/rfcs/: 0000-process.md  0001-core-protocol-optimization.md  (+3 more)
extension/: esbuild.mjs  manifest.json  package-lock.json  package.json  tsconfig.content.json  tsconfig.json  update.json  vitest.config.js
native-manifest/: org.brp.bridge.json
spikes/b1-ipc-spike/: Cargo.toml  README.md
spikes/b1-ipc-spike/src/: main.rs
tests/: run_manual_test.py  test_e2e.py  test_real_extension.py  test_smoke.py
(+69 files in other folders)
