[package]
name = "brp-bridge"
version = "0.1.0"
edition = "2021"
description = "BRP Native Messaging Bridge for Firefox/Zen Browser"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.26"
futures-util = "0.3"

[profile.release]
opt-level = "s"
lto = true
strip = true
